update what we do content

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 		<div class="section-one" id="work" style="background-color: #f9f9f9;" data-menu-offset="-64">
 			<div class="wrapper">
 				<h1 style="padding-bottom:0px;">our work</h1>
-				<p>International award-winning creative design, branding and marketing with over $5 billion in online sales</p>
+				<p style="padding-bottom: 24px;">International award-winning creative design, branding and marketing with over $5 billion in online sales</p>
 				<div class="gallery">
-					<div class="ftg-filters">
+					<!--<div class="ftg-filters">
 						<a href="#" class="iconz">SHOW ALL<span class="fadeIn">:D</span></a>
 						<a href="#cat-1" class="iconz"><span class="fadeIn">Print</span><img src="img/icons/print-icon.png"/></a>
 						<a href="#cat-2" class="iconz"><span class="fadeIn">Mobile</span><img src="img/icons/mobile-icon.png"/></a>
@@ -88,7 +88,7 @@
 						<a href="#cat-3" class="iconz"><span class="fadeIn">Social</span><img src="img/icons/social-icon.png"/></a>
 						<a href="#cat-1" class="iconz"><span class="fadeIn">Email</span><img src="img/icons/email-icon.png"/></a>
 						<a href="#cat-2" class="iconz"><span class="fadeIn">Awards</span><img src="img/icons/awards-icon.png"/></a>
-					</div>
+					</div>-->
 					
 					<div class="ftg-items">
 						<article class="tile ftg-cat-1 ftg-cat-2">
