--- a/what-we-do-carousel.html
+++ b/what-we-do-carousel.html
@@ -1,15 +1,15 @@
 <div class="wrapper">
     <div class="what-we-do-carousel-nav">
-        <div class="item"><img src="img/icons/print-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 1);'/></div>
-        <div class="item"><img src="img/icons/mobile-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 2);'/></div>
-        <div class="item"><img src="img/icons/web-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 3);'/></div>
-        <div class="item"><img src="img/icons/video-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 4);'/></div>
-        <div class="item"><img src="img/icons/branding-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 5);'/></div>
-        <div class="item"><img src="img/icons/announce-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 6);'/></div>
-        <div class="item"><img src="img/icons/marketing-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 7);'/></div>
-        <div class="item"><img src="img/icons/illustrations-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 8);'/></div>
-        <div class="item"><img src="img/icons/social-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 9);'/></div>
-        <div class="item"><img src="img/icons/email-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 10);'/></div>
+        <div class="item"><img src="img/icons/print-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 0);'/></div>
+        <div class="item"><img src="img/icons/mobile-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 1);'/></div>
+        <div class="item"><img src="img/icons/web-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 2);'/></div>
+        <div class="item"><img src="img/icons/video-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 3);'/></div>
+        <div class="item"><img src="img/icons/branding-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 4);'/></div>
+        <div class="item"><img src="img/icons/announce-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 5);'/></div>
+        <div class="item"><img src="img/icons/marketing-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 6);'/></div>
+        <div class="item"><img src="img/icons/illustrations-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 7);'/></div>
+        <div class="item"><img src="img/icons/environmental-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 8);'/></div>
+        <div class="item"><img src="img/icons/email-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 9);'/></div>
     </div>
 </div>
 <div class="wrapper">
@@ -18,26 +18,134 @@
             <div class="left">
                 <h3>Print Work</h3>
                 <ul>
-                    <li>Brochures</li>
-                    <li>Fliers</li>
+                    <li>Brochures and Fliers</li>
+                    <li>Packaging</li>
+                    <li>Posters</li>
                     <li>Direct Mailers</li>
                     <li>Business Cards</li>
                 </ul>
+                <span>International Apparel Company</span>
             </div>
             <div class="right"><img src="img/wwd-1.png" /></div>
         </div>
         <div class="item">
             <div class="left">
-                <h3>Print Work</h3>
+                <h3>Mobile</h3>
+                <h3 style="padding-top: 0;">Apps</h3>
                 <ul>
-                    <li>Brochures</li>
-                    <li>Fliers</li>
-                    <li>Direct Mailers</li>
-                    <li>Business Cards</li>
+                    <li>Web Apps</li>
+                    <li>Native Apps</li>
+                    <li>UI / UX</li>
+                    <li>Games</li>
+                </ul>
+                <span>World’s First International Brand Hotel</span>
+            </div>
+            <div class="right"><img style="padding: 24px 32px 0;" src="img/wwd-2.png" /></div>
+        </div>
+        <div class="item">
+            <div class="left">
+                <h3>Web Sites</h3>
+                <ul>
+                    <li>Responsive Website Design</li>
+                    <li>Interactive Kiosk Design</li>
+                    <li>Web Development</li>
+                    <li>UX / UI Expertise</li>
+                    <li>Wordpress & More</li>
                 </ul>
             </div>
-            <div class="right"><img src="img/wwd-1.png" /></div>
+            <div class="right"><img style="padding: 64px 0;" src="img/wwd-3.png" /></div>
         </div>
+        <div class="item">
+            <div class="left">
+                <h3>Video</h3>
+                <ul>
+                    <li>Corporate Video Messaging</li>
+                    <li>Televison Commercials</li>
+                    <li>Web / Viral Videos</li>
+                    <li>Special Films</li>
+                    <li>Animated Graphics & Editing</li>
+                </ul>
+                <span>Local, National and International Locations</span>
+            </div>
+            <div class="right"><img style="padding: 48px 0 48px 32px;" src="img/wwd-4.png" /></div>
+        </div>
+        <div class="item">
+            <div class="left">
+                <h3>Branding</h3>
+                <ul>
+                    <li>Logo / Iconography Development</li>
+                    <li>Corporate Identity Packages</li>
+                    <li>Branding Standard Packages</li>
+                </ul>
+                <span>Premium Custom Pool Builder</span>
+            </div>
+            <div class="right"><img src="img/wwd-5.png" /></div>
+        </div>
+        <div class="item">
+            <div class="left">
+                <h3>Advertising</h3>
+                <ul>
+                    <li>TV | Radio | Print</li>
+                    <li>Online</li>
+                    <li>New Media</li>
+                </ul>
+                <span>AIGA Arizona’s Best of 2016</span>
+            </div>
+            <div class="right"><img style="padding: 12px 0 0 12px;" src="img/wwd-6.png" /></div>
+        </div>
+        <div class="item">
+            <div class="left">
+                <h3>Marketing</h3>
+                <ul>
+                    <li>Marketing Consulting</li>
+                    <li>Strategy & Implementation</li>
+                    <li>Outsourced Marketing Department</li>
+                </ul>
+                <span>Local, National and International Implementation</span>
+            </div>
+            <div class="right"><img style="padding: 48px 0 12px 12px;" src="img/wwd-7.png" /></div>
+        </div>
+        <div class="item">
+            <div class="left">
+                <h3>Illustration</h3>
+                <ul>
+                    <li>Infographics</li>
+                    <li>Product Animations</li>
+                    <li>Photostrations</li>
+                </ul>
+                <span>Social Media Campaign Infographic to Promote International Hotel Brands</span>
+            </div>
+            <div class="right"><img style="padding: 32px 48px 0;" src="img/wwd-8.png" /></div>
+        </div>
+        <div class="item">
+            <div class="left">
+                <h3>Display</h3>
+                <h3 style="padding-top: 0;">Graphics</h3>
+                <ul>
+                    <li>Trade Show Booths</li>
+                    <li>Point of Purchase Displays</li>
+                    <li>Large Format Graphics</li>
+                    <li>Interior Office Branding</li>
+                </ul>
+                <span>World-Leading Hotel Software Company</span>
+            </div>
+            <div class="right"><img style="padding: 0 0 0 32px;" src="img/wwd-9.png" /></div>
+        </div>
+        <div class="item">
+            <div class="left">
+                <h3>Email</h3>
+                <h3 style="padding-top: 0;">Campaigns</h3>
+                <ul>
+                    <li>Campaign Creative</li>
+                    <li>Ongoing Incentives & Newsletters</li>
+                    <li>Design / Develop / Implement</li>
+                    <li>Automatic Ongoing Follow-Up</li>
+                </ul>
+                <span>The World’s Leading In-Floor Pool Cleaner Company</span>
+            </div>
+            <div class="right"><img style="padding: 24px 0 0 24px;" src="img/wwd-10.png" /></div>
+        </div>
+
     </div>
     <div class="navi">
         <img class="arrow left" src="img/slider-left2.png" onclick='$(".what-we-do-carousel-content").trigger("owl.prev");' />
@@ -45,6 +153,7 @@
     </div>
  </div>   
 <script>
-    $(".what-we-do-carousel-nav").owlCarousel({ items : 3, itemsDesktop: [5000,10], itemsDesktopSmall: [800,8], itemsTablet: [640,6], itemsMobile: [480,4] });
-    $(".what-we-do-carousel-content").owlCarousel({ items : 1, itemsDesktop: [5000,1], itemsDesktopSmall: [800,1], itemsTablet: [640,1] });
+    $(".what-we-do-carousel-nav").owlCarousel({ lazyLoad : true, items : 3, itemsDesktop: [5000,10], itemsDesktopSmall: [800,8], itemsTablet: [640,6], itemsMobile: [480,4] });
+    $(".what-we-do-carousel-content").owlCarousel({ singleItem : true, lazyLoad : true, items : 1, itemsDesktop: [5000,1], itemsDesktopSmall: [800,1], itemsTablet: [640,1] });
+    
 </script>
