--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 		<div class="play-our-game">
 			<div class="wrapper">
 				<h1>PLAY OUR GAME</h1>
-				<p style="max-width: 540px; margin: 0 auto;">Business Cards is our twist on the classic card matching game. We developed the game as an interactive form of exploring some of our award-winning work while helping exercise your brain. Give it a try. But watch out. It’s addicting.</p>
+				<p style="max-width: 540px; margin: 0 auto;">Business Cards is our twist on the classic card matching game. Pick a card. Find it's match. Do it fast.  We developed the game as an interactive form of exploring our international award-winning work while giving you a chance to exercise your brain.  The cards feature some of the brands we've created through our many years of serving the business community.</p>
 				<div class="left">
 					<img src="games/business-cards/www/img/game-logo.gif"/>
 					<a class="button" href="play.html">play now</a>
