--- a/what-we-do-carousel.html
+++ b/what-we-do-carousel.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<!--<div class="wrapper">
     <div class="what-we-do-carousel-nav">
         <div class="item"><img src="img/icons/print-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 0);'/></div>
         <div class="item"><img src="img/icons/mobile-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 1);'/></div>
@@ -11,7 +11,7 @@
         <div class="item"><img src="img/icons/environmental-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 8);'/></div>
         <div class="item"><img src="img/icons/email-icon.png" onclick='$(".what-we-do-carousel-content").trigger("owl.goTo", 9);'/></div>
     </div>
-</div>
+</div>-->
 <div class="wrapper">
     <div class="what-we-do-carousel-content">
         <div class="item">
