--- a/games/flappy-yano/index.html
+++ b/games/flappy-yano/index.html
@@ -27,8 +27,9 @@
 
         <!-- Game 'Classes'  -->
         <script type="text/javascript" src="js/AssetManager.js"></script>
-        <script type="text/javascript" src="js/Button.js"></script>
         <script type="text/javascript" src="js/Player.js"></script>
+        <script type="text/javascript" src="js/Gravity.js"></script>
+        <script type="text/javascript" src="js/Button.js"></script>
         <script type="text/javascript" src="js/Game.js"></script>
     </body>
 </html>
