--- a/results.html
+++ b/results.html
@@ -25,6 +25,12 @@
 			<h1 class="white" style="top: 550px;">$8 Billion in Online Sales</h1>
 			<p class="white" style="top: 600px;">Sold online for our clients</p>
 		</div>
+		
+		<div class="section-animation" id="clock" style="background-color: #4ecfdb; padding-bottom: 48px;">
+			<iframe id="iframe_clock" src="animations/clock.html" height="640px"></iframe>
+			<h1 class="white" style="top: 550px;">$300 Million in Purchases</h1>
+			<p class="white" style="top: 600px;">Converted for our clients on mobile apps</p>
+		</div>
 
 		<div class="section-animation" id="water" style="background-color: #bddb4e;">
 			<iframe id="iframe_water" src="animations/water.html" height="640px"></iframe>
@@ -50,15 +56,39 @@
 			    $('.nav').load('nav.html');
                 $('.footer').load('footer.html');
 
+				console.log($('#iframe_clock').offset().top);
+
 				//flicker backgrounds
-				setInterval(function(){ $('.section-animation#award').animate( { backgroundColor: '#f3f3f3' }, 125).animate( { backgroundColor: '#f5f5f5' }, 0);}, 250);
-				setInterval(function(){ $('.section-animation#eight').animate( { backgroundColor: '#4e93db' }, 125).animate( { backgroundColor: '#5296de' }, 0);}, 250);
-				setInterval(function(){ $('.section-animation#water').animate( { backgroundColor: '#bddb4e' }, 125).animate( { backgroundColor: '#c1e051' }, 0);}, 250);
-				setInterval(function(){ $('.section-animation#bed').animate( { backgroundColor: '#6452ad' }, 75).animate( { backgroundColor: '#6754b3' }, 0);}, 1000);
+				//setInterval(function(){ $('.section-animation#award').animate( { backgroundColor: '#f3f3f3' }, 125).animate( { backgroundColor: '#f5f5f5' }, 0);}, 250);
+				//setInterval(function(){ $('.section-animation#eight').animate( { backgroundColor: '#4e93db' }, 125).animate( { backgroundColor: '#5296de' }, 0);}, 250);
+				//setInterval(function(){ $('.section-animation#water').animate( { backgroundColor: '#bddb4e' }, 125).animate( { backgroundColor: '#c1e051' }, 0);}, 250);
+				//setInterval(function(){ $('.section-animation#bed').animate( { backgroundColor: '#6452ad' }, 75).animate( { backgroundColor: '#6754b3' }, 0);}, 1000);
+			});
+
+			$(window).on("scroll", function (event) {
+				var wY = $(window).scrollTop();
+				var wH = $(window).height();
+				$('.section-animation').each(function(i){
+					var animation = document.getElementById("iframe_"+$(this).attr('id')).contentWindow.exportRoot;
+					if (isScrolledIntoView("#"+$(this).attr('id'))){
+						$(this).find('iframe').fadeIn(2000);
+						animation.paused=false;
+					}
+					else {
+						$(this).find('iframe').fadeOut(0);
+						animation.paused=true;
+						animation.gotoAndStop(0);
+					}
+				});
 			});
 
 			$(window).on("load",function() {
-				if (isMobile()){
+				/*document.getElementById("iframe_award").contentWindow.exportRoot.paused = true;
+				document.getElementById("iframe_eight").contentWindow.exportRoot.paused = true;
+				document.getElementById("iframe_clock").contentWindow.exportRoot.paused = false;
+				document.getElementById("iframe_water").contentWindow.exportRoot.paused = true;
+				document.getElementById("iframe_bed").contentWindow.exportRoot.paused = true;*/
+				/*if (isMobile()){
 					//freeze frames for mobile devices
 					var iframe_award = document.getElementById("iframe_award").contentWindow;
 					var iframe_eight = document.getElementById("iframe_eight").contentWindow;
@@ -68,8 +98,18 @@
 					iframe_eight.exportRoot.gotoAndStop(0);
 					iframe_water.exportRoot.gotoAndStop(21);
 					iframe_bed.exportRoot.gotoAndStop(0);
-				}
+				}*/
 			});
+			function isScrolledIntoView(elem) {
+				var docViewTop = $(window).scrollTop();
+				var docViewBottom = docViewTop + $(window).height();
+				var elemTop = $(elem).offset().top;
+				var elemBottom = elemTop + $(elem).height();
+				return elemBottom > docViewTop && elemTop < docViewBottom;
+				/*return ((( elemTop >= docViewTop) && (elemTop <= docViewBottom)) || 
+						((elemBottom >= docViewTop) && (elemBottom <= docViewBottom)) ||
+						((elemBottom <= docViewBottom) && (elemTop >= docViewTop)));*/
+			}
 			function isMobile(){ return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? true:false; }
 		</script>
 	</body>
