--- a/results.html
+++ b/results.html
@@ -56,8 +56,6 @@
 			    $('.nav').load('nav.html');
                 $('.footer').load('footer.html');
 
-				console.log($('#iframe_clock').offset().top);
-
 				//flicker backgrounds
 				//setInterval(function(){ $('.section-animation#award').animate( { backgroundColor: '#f3f3f3' }, 125).animate( { backgroundColor: '#f5f5f5' }, 0);}, 250);
 				//setInterval(function(){ $('.section-animation#eight').animate( { backgroundColor: '#4e93db' }, 125).animate( { backgroundColor: '#5296de' }, 0);}, 250);
@@ -68,37 +66,40 @@
 			$(window).on("scroll", function (event) {
 				var wY = $(window).scrollTop();
 				var wH = $(window).height();
-				$('.section-animation').each(function(i){
-					var animation = document.getElementById("iframe_"+$(this).attr('id')).contentWindow.exportRoot;
-					if (isScrolledIntoView("#"+$(this).attr('id'))){
-						$(this).find('iframe').fadeIn(2000);
-						animation.paused=false;
-					}
-					else {
-						$(this).find('iframe').fadeOut(0);
-						animation.paused=true;
-						animation.gotoAndStop(0);
-					}
-				});
+				if (!isMobile()){
+					$('.section-animation').each(function(i){
+						var animation = document.getElementById("iframe_"+$(this).attr('id')).contentWindow.exportRoot;
+						if (isScrolledIntoView("#"+$(this).attr('id'))){
+							$(this).find('iframe').fadeIn(2000);
+							animation.paused=false;
+						}
+						else {
+							$(this).find('iframe').fadeOut(0);
+							animation.paused=true;
+							animation.gotoAndStop(0);
+						}
+					});
+				}
 			});
 
 			$(window).on("load",function() {
-				/*document.getElementById("iframe_award").contentWindow.exportRoot.paused = true;
-				document.getElementById("iframe_eight").contentWindow.exportRoot.paused = true;
-				document.getElementById("iframe_clock").contentWindow.exportRoot.paused = false;
-				document.getElementById("iframe_water").contentWindow.exportRoot.paused = true;
-				document.getElementById("iframe_bed").contentWindow.exportRoot.paused = true;*/
-				/*if (isMobile()){
-					//freeze frames for mobile devices
+				if (isMobile()){
 					var iframe_award = document.getElementById("iframe_award").contentWindow;
 					var iframe_eight = document.getElementById("iframe_eight").contentWindow;
+					var iframe_clock = document.getElementById("iframe_clock").contentWindow;
 					var iframe_water = document.getElementById("iframe_water").contentWindow;
 					var iframe_bed = document.getElementById("iframe_bed").contentWindow;
+					iframe_award.exportRoot.paused = true;
+					iframe_eight.exportRoot.paused = true;
+					iframe_clock.exportRoot.paused = true;
+					iframe_water.exportRoot.paused = true;
+					iframe_bed.exportRoot.paused = true;
 					iframe_award.exportRoot.gotoAndStop(24);
 					iframe_eight.exportRoot.gotoAndStop(0);
+					iframe_clock.exportRoot.gotoAndStop(97);
 					iframe_water.exportRoot.gotoAndStop(21);
 					iframe_bed.exportRoot.gotoAndStop(0);
-				}*/
+				}
 			});
 			function isScrolledIntoView(elem) {
 				var docViewTop = $(window).scrollTop();
@@ -106,9 +107,6 @@
 				var elemTop = $(elem).offset().top;
 				var elemBottom = elemTop + $(elem).height();
 				return elemBottom > docViewTop && elemTop < docViewBottom;
-				/*return ((( elemTop >= docViewTop) && (elemTop <= docViewBottom)) || 
-						((elemBottom >= docViewTop) && (elemBottom <= docViewBottom)) ||
-						((elemBottom <= docViewBottom) && (elemTop >= docViewTop)));*/
 			}
 			function isMobile(){ return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? true:false; }
 		</script>
