--- a/results.html
+++ b/results.html
@@ -16,32 +16,32 @@
 
 		<div class="section-animation" id="award" style="background-color: #f3f3f3; padding-top: 80px;">
 			<iframe id="iframe_award" src="animations/award.html" height="640px"></iframe>
-			<h1 style="top: 128px;">Award winning results</h1>
-			<p style="top: 640px;">International award-winning work spanning over 20 years</p>
+			<h1>Award winning results</h1>
+			<p>International award-winning work spanning over 20 years</p>
 		</div>
 		
 		<div class="section-animation" id="eight" style="background-color: #4e93db; padding-bottom: 48px;">
 			<iframe id="iframe_eight" src="animations/eight.html" height="640px"></iframe>
-			<h1 class="white" style="top: 550px;">$8 Billion in Online Sales</h1>
-			<p class="white" style="top: 600px;">Sold online for our clients</p>
+			<h1 class="white">$8 Billion in Online Sales</h1>
+			<p class="white">Sold online for our clients</p>
 		</div>
 		
 		<div class="section-animation" id="clock" style="background-color: #4ecfdb; padding-bottom: 48px;">
 			<iframe id="iframe_clock" src="animations/clock.html" height="640px"></iframe>
-			<h1 class="white" style="top: 550px;">$300 Million in Purchases</h1>
-			<p class="white" style="top: 600px;">Converted for our clients on mobile apps</p>
+			<h1 class="white">$300 Million in Purchases</h1>
+			<p class="white">Converted for our clients on mobile apps</p>
 		</div>
 
 		<div class="section-animation" id="water" style="background-color: #bddb4e;">
 			<iframe id="iframe_water" src="animations/water.html" height="640px"></iframe>
-			<h1 class="white" style="top: 520px;">400% Sales Growth in One Year</h1>
-			<p class="white" style="top: 570px;">Growth for our pool industry clients</p>
+			<h1 class="white">400% Sales Growth in One Year</h1>
+			<p class="white">Growth for our pool industry clients</p>
 		</div>
 
 		<div class="section-animation" id="bed" style="background-color: #6452ad;">
 			<iframe id="iframe_bed" src="animations/bed.html" height="640px"></iframe>
-			<h1 class="white" style="top: 520px;">$1 Billion in One Year</h1>
-			<p class="white" style="top: 570px;">Sold online for our travel clients</p>
+			<h1 class="white">$1 Billion in One Year</h1>
+			<p class="white">Sold online for our travel clients</p>
 		</div>
 		
 		<div class="footer"></div>
@@ -55,12 +55,6 @@
 			$( document ).ready(function() {
 			    $('.nav').load('nav.html');
                 $('.footer').load('footer.html');
-
-				//flicker backgrounds
-				//setInterval(function(){ $('.section-animation#award').animate( { backgroundColor: '#f3f3f3' }, 125).animate( { backgroundColor: '#f5f5f5' }, 0);}, 250);
-				//setInterval(function(){ $('.section-animation#eight').animate( { backgroundColor: '#4e93db' }, 125).animate( { backgroundColor: '#5296de' }, 0);}, 250);
-				//setInterval(function(){ $('.section-animation#water').animate( { backgroundColor: '#bddb4e' }, 125).animate( { backgroundColor: '#c1e051' }, 0);}, 250);
-				//setInterval(function(){ $('.section-animation#bed').animate( { backgroundColor: '#6452ad' }, 75).animate( { backgroundColor: '#6754b3' }, 0);}, 1000);
 			});
 
 			$(window).on("scroll", function (event) {
@@ -83,7 +77,7 @@
 			});
 
 			$(window).on("load",function() {
-				if (isMobile()){
+				if (isAndroid()){
 					var iframe_award = document.getElementById("iframe_award").contentWindow;
 					var iframe_eight = document.getElementById("iframe_eight").contentWindow;
 					var iframe_clock = document.getElementById("iframe_clock").contentWindow;
@@ -108,6 +102,7 @@
 				var elemBottom = elemTop + $(elem).height();
 				return elemBottom > docViewTop && elemTop < docViewBottom;
 			}
+			function isAndroid(){ return /Android/i.test(navigator.userAgent) ? true:false; }
 			function isMobile(){ return /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ? true:false; }
 		</script>
 	</body>
