finish gonotes page

--- a/gonotes.html
+++ b/gonotes.html
@@ -107,6 +107,20 @@
 				</div>
 			</div>
 
+			 <div class="section-four shrink" style="background-color: #fff;">
+				<div class="wrapper">
+					<img class="fuller" src="img/18-sheet1.png"/>
+					<img class="abs" src="img/18-sheet2.png" style="bottom: 10%; left:10%; width: 60%;"
+							 data-bottom-top="bottom:10%; left: 10%;" data-top-bottom="bottom:30%; left: 5%"/>
+					<img class="abs"  src="img/18-sheet3.png" style="bottom: 25%; left:20%; width: 60%"
+							 data-bottom-top="bottom:25%; left: 20%; width: 60%" data-top-bottom="bottom:30%; left: 25%; width: 80%;"/>
+				</div>
+			</div>
+
+			<div class="section-three" style="background-color: #efefef;">
+                <div class="wrapper" style="padding:0;"><img class="fuller" src="img/18-brochure.jpg" style="display:block;"/></div>
+			</div>
+
 			<div class="footer"></div>
 
 			<script type="text/javascript" src="js/jquery-2.1.0.js"></script>
