update portfolio thumbnail captions

--- a/index.html
+++ b/index.html
@@ -92,44 +92,44 @@
 					
 					<div class="ftg-items">
 						<article class="tile ftg-cat-1 ftg-cat-2">
-							<a class="tile-inner"><img class="item" src="img/18-thumb.jpg">
-							<div class="caption" style="padding-top: 45%;">coming soon!</div></a>
+							<a class="tile-inner" href="gonotes.html"><img class="item" src="img/18-thumb.jpg">
+							<div class="caption" style="padding-top: 45%;">GoNotes</div></a>
 						</article>
 						<article class="tile ftg-cat-2">
 							<a class="tile-inner" href="library.html"><img class="item" src="img/11-thumb.jpg">
-							<div class="caption"></div></a>
+							<div class="caption" style="padding-top: 45%;">Phoenix Public Library</div></a>
 						</article>
 						<article class="tile ftg-cat-3">
 							<a class="tile-inner" href="skytouch.html"><img class="item" src="img/16-thumb.jpg">
-							<div class="caption"></div></a>
+							<div class="caption" style="padding-top: 45%;">SkyTouch</div></a>
 						</article>
 						<article class="tile ftg-cat-1">
 							<a class="tile-inner" href="f1.html"><img class="item" src="img/13-thumb.jpg">
-							<div class="caption"></div></a>
+							<div class="caption" style="padding-top: 20%;">F1</div></a>
 						</article>
 						<article class="tile ftg-cat-2">
 							<a class="tile-inner" href="jack.html"><img class="item" src="img/09-thumb.jpg">
-							<div class="caption"></div></a>
+							<div class="caption" style="padding-top: 45%;">Jack Traveler</div></a>
 						</article>
 						<article class="tile ftg-cat-3">
 							<a class="tile-inner" href="mms.html"><img class="item" src="img/19-thumb.jpg">
-							<div class="caption"></div></a>
+							<div class="caption" style="padding-top: 45%;">MMS</div></a>
 						</article>
 						<article class="tile ftg-cat-1">
 							<a class="tile-inner" href="bluesquare.html"><img class="item" src="img/21-thumb.jpg">
-							<div class="caption"></div></a>
+							<div class="caption" style="padding-top: 20%;">BlueSquare</div></a>
 						</article>
 						<article class="tile ftg-cat-2">
 							<a class="tile-inner" href="pc.html"><img class="item" src="img/02-thumb.jpg">
-							<div class="caption"></div></a>
+							<div class="caption" style="padding-top: 45%;">The Pain Center</div></a>
 						</article>
 						<article class="tile ftg-cat-3">
 							<a class="tile-inner" href="kyle.html"><img class="item" src="img/0902-thumb.jpg">
-							<div class="caption"></div></a>
+							<div class="caption" style="padding-top: 45%;">Kyle Bush</div></a>
 						</article>
 						<article class="tile ftg-cat-1">
 							<a class="tile-inner" href="shc.html"><img class="item" src="img/01-thumb.jpg">
-							<div class="caption"></div></a>
+							<div class="caption" style="padding-top: 20%;">Scottsdale Healthcare</div></a>
 						</article>
 					</div>
 				</div>
