--- a/gonotes.html
+++ b/gonotes.html
@@ -7,6 +7,7 @@
 		<meta name="author" content="jacob debenedetto">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" href="css/normalize.css">
+		<link rel="stylesheet" href="css/lity.min.css">
 		<link rel="stylesheet" href="css/owl.carousel.css">
 		<link rel="stylesheet" href="css/final-tiles-gallery.css">
 		<link rel="stylesheet" href="css/stylesheet.css">
@@ -79,7 +80,7 @@
 
 			<div class="section-three" style="background-color: #4097d4;">
                 <div class="wrapper" style="padding:0;"><img class="fuller" src="img/18-video.png" style="display:block;"/></div>
-				<a href="#" class="abs" style="text-align: center; left:0%; right:0%; top: 36%;">
+				<a data-lity href="https://www.youtube.com/watch?v=J1d5D9msGvg" class="abs" style="text-align: center; left:0%; right:0%; top: 36%;">
 					<img class="hover-fade fade-effect" src="img/18-play.png" style="max-width: 15%;"/>
 				</a>
 			</div>
@@ -124,6 +125,7 @@
 			<div class="footer"></div>
 
 			<script type="text/javascript" src="js/jquery-2.1.0.js"></script>
+			<script type="text/javascript" src="js/lity.min.js"></script>
 			<script type="text/javascript" src="js/owl.carousel.min.js"></script>
 			<script type="text/javascript" src="js/skrollr.min.js"></script>
 			<script type="text/javascript" src="js/skrollr.menu.min.js"></script>
