--- a/play.html
+++ b/play.html
@@ -32,7 +32,7 @@
 			<div id="about-the-game" style="position:absolute; top: -80px;"></div>
 			<div class="wrapper">
 				<h1>ABOUT THE GAME</h1>
-				<p style="max-width: 768px; margin: 0 auto;"><em>Business Cards</em> is our twist on the classic card matching game.  We developed the game as an interactive form of exploring our international award-winning work.  Here's some background on each of the game cards:</p>
+				<p style="max-width: 768px; margin: 0 auto;"><em>Business Cards</em> is our twist on the classic card matching game. We developed the game as an interactive form of exploring our international award-winning work while exercising your brain.  Here's some background on each of the game cards:</p>
 				<div class="about-the-game-carousel"></div>
 			</div>
 		</div>
