--- a/games/flappy-yano/index.html
+++ b/games/flappy-yano/index.html
@@ -28,6 +28,7 @@
         <!-- Game 'Classes'  -->
         <script type="text/javascript" src="js/AssetManager.js"></script>
         <script type="text/javascript" src="js/Player.js"></script>
+        <script type="text/javascript" src="js/Obstacles.js"></script>
         <script type="text/javascript" src="js/Gravity.js"></script>
         <script type="text/javascript" src="js/Button.js"></script>
         <script type="text/javascript" src="js/Game.js"></script>
